# PasswordManagerVault

./: .gitignore  CMakeLists.txt  HOW_THIS_TEMPLATE_WORKS.md  README.md
diagrams/: example_class_diagram.puml
docs/: 01_Vision.md  02_UseCaseModel.md  03_SupplementarySpecification.md  04_Glossary.md  05_RiskList.md  06_IterationPlan.md  07_PhasePlan.md  08_DevelopmentCase.md  SESSION_NOTES.md
include/: Entry.h  README.md  Vault.h
prototypes/: README.md
prototypes/qt-dialog/: CMakeLists.txt  main.cpp
prototypes/qt-form/: CMakeLists.txt  main.cpp
prototypes/qt-hello/: CMakeLists.txt  main.cpp
prototypes/qt-signals/: CMakeLists.txt  main.cpp
scripts/: qt-env.ps1
src/: Entry.cpp  Vault.cpp  main.cpp
tests/: CMakeLists.txt  README.md  test_entry.cpp  test_main.cpp  test_vault.cpp
